--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -156,25 +156,27 @@ To further back-up the use of a higher time integration step, we need to underst
 
 \todo{talk about superdiffusion for KAXQIL. Maybe landauer blowtorch effect.}
 When probing the much higher time-scale of 50--950~\si{\ns}, I came across an anomalous diffusion regime that corresponds to a surdiffusion as defined in the Figure~\ref{fgr:MSD_init}
+Blow torch effect, file-diffusion (no its not sqrt), ballistic conduction likely 
 
 
+\subsection{High-throughput screening of diffusion coefficients}
 
-\subsection{Structure--diffusivity relationships}
-
-\todo{HERE}
+\subsubsection{Screening procedure}
 
 500 million cycles with restart on the server. order of 2--3 days per structures
-Requires 2 to 3 restarts. Still some structures did not finish within this time frame but the incomplete MSD can however be anlyzed.
+Requires 2 to 3 restarts. Still some structures did not finish within this time frame but the incomplete MSD can however be analyzed.
 
 \todo{We have generated diffusion coefficients for the ... best materials}
+
+\subsubsection{Structure--diffusivity relationships}
 
 \todo{correlation with VF/SA/Selectivity/permselectivity}
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_Df-ccdc_barrier.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/difflog_Df-uff298K_barrier.pdf}
-    \caption{\todo{correlation with PLD without labeling}}\label{fgr:}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-diameter_ccdc_colored_s_+.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-diameter_colored_s_+.pdf}
+    \caption{\todo{correlation with PLD without labeling}Left: PLD/e{CCDC} and right: PLD\e{UFF}}\label{fgr:}
 \end{figure}
 
 
