--- a/1-screening.tex
+++ b/1-screening.tex
@@ -20,11 +20,10 @@ The process of adhering particles or molecules on surfaces is called adsorption.
 
 
 %pore size
-Most of the materials studied in this thesis will have pores with a size around the nanometer called ``nanopores''. The International Union of Pure Applied Chemistry (IUPAC) classifies these pores into three categories according to their size: micropores ($\leq$\SI{2}{\nano\meter}), mesopores (\SI{2}{\nano\meter}--\SI{50}{\nano\meter}) and macropores ($>$\SI{50}{\nano\meter}).\autocite{Sing_1985} Here,
-we will use a single terminology (nanopore) to designate all pores of under a few nanometers. A good characterization of the nanopores of these materials is key to fine-tuning the adsorption properties.\autocite{Yan_2020} The pore size distribution (PSD) can be computationally determined if we have resolved the structure of the nanoporous material (using X-ray diffraction on crystallized porous solids). This is the most accurate determination method of the PSD, but it relies on considering that the structure is perfectly rigid and crystalline so that only one structural data can characterize it. Other experimental methods rely on assumptions, model systems (e.g., cylindrical) or adsorption characteristics. For instance, stereological analyses based on plane sections cut through a porous material can evaluate the PSD.\autocite{Haynes_1973} The Horvath-Kawazoe (HK) method is a semi-empirical analytic model of adsorption isotherm that can extract PSD. Small angle X-ray and neutron scattering methods are non-destructive methods of pore characterization.\autocite{Radlinski_2004} In this thesis, we will rely on computationally analyzing X-ray diffusion data to deduce pore sizes and other geometrical characteristics. 
+Most of the materials studied in this thesis will have pores with a size around the nanometer called ``nanopores''. The International Union of Pure Applied Chemistry (IUPAC) classifies these pores into three categories according to their size: micropores ($\leq$\SI{2}{\nano\meter}), mesopores (\SI{2}{\nano\meter}--\SI{50}{\nano\meter}) and macropores ($>$\SI{50}{\nano\meter}).\autocite{Sing_1985} Here, I will use a single terminology (nanopore) to designate all pores of under a few nanometers. A good characterization of the nanopores of these materials is key to fine-tuning the adsorption properties.\autocite{Yan_2020} The pore size distribution (PSD) can be computationally determined if the structure of the nanoporous material is already resolved using X-ray diffraction on crystallized porous solids. This is the most accurate determination method of the PSD, but it relies on considering that the structure is perfectly rigid and crystalline so that only one structural data can characterize it. Other experimental methods rely on assumptions, model systems (e.g., cylindrical) or adsorption characteristics. For instance, stereological analyses based on plane sections cut through a porous material can evaluate the PSD.\autocite{Haynes_1973} The Horvath-Kawazoe (HK) method is a semi-empirical analytic model of adsorption isotherm that can extract PSD. Small angle X-ray and neutron scattering methods are non-destructive methods of pore characterization.\autocite{Radlinski_2004} In this thesis, I will mainly rely on computationally analyzing X-ray resolved structures to deduce pore sizes and other geometrical characteristics. 
 
 %volume / porosity
-The pore volume consists in the measure of the volume of ``closed'' and ``open'' pores of nanoporous materials. Depending on the way of measuring it, different quantities are probed. Some pores could not be accessed by some adsorbate; depending on the probe size the volume calculated will not be the same. Methods that do not rely on adsorption like scattering or stereology will, however, measure the total pore volume. The porosity or void fraction would be defined as the ratio between the pore volume and the apparent framework volume. Depending on the method, we can therefore retrieve either the total porosity, the porosity opened or closed to a given probe adsorbate. 
+The pore volume consists in the measure of the volume of ``closed'' and ``open'' pores of nanoporous materials. Depending on the way of measuring it, different quantities are probed. Some pores could not be accessed by some adsorbate; depending on the probe size the volume calculated will not be the same. Methods that do not rely on adsorption like scattering or stereology will, however, measure the total pore volume. The porosity or void fraction would be defined as the ratio between the pore volume and the apparent framework volume. Depending on the method, we can retrieve either the total porosity, the porosity opened or closed to a given probe adsorbate. 
 
 
 %Definitions of surface area, porosity etc. Values depend on the method to extract them. A word on computational characterization (will be developed later)
