--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -270,6 +270,8 @@ ADOGEH\cite{Peikert_2012} & 12,7 &  10 & 49 & 5,1 & 14 &               5$\times$
 
 \subsection{Implementation in C++}
 
+Grid calculation similar to the one in chapter 3
+
 Breadth-first search
 
 \subsection{Preliminary results}
@@ -304,9 +306,10 @@ ML descriptors
 
 Chann dim
 
-\todo{coefficient of tortuosity ?}
 
 \textbf{Next steps}
+
+\todo{coefficient of tortuosity ?}
 
 
 \todo{find higher order relations than the diffusion for 1D frameworks. Is it possible for other D channels?}
