--- a/thesis.bib
+++ b/thesis.bib
@@ -3557,3 +3557,16 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {{RUPTURA}: simulation code for breakthrough, ideal adsorption solution theory computations, and fitting of isotherm models},
 	journal = {Molecular Simulation}
 }
+@article{Wang_2022,
+	doi = {10.1021/acsanm.1c03907},
+	url = {https://doi.org/10.1021%2Facsanm.1c03907},
+	year = 2022,
+	month = {feb},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {5},
+	number = {3},
+	pages = {3701--3711},
+	author = {Jingqi Wang and Musen Zhou and Diannan Lu and Weiyang Fei and Jianzhong Wu},
+	title = {Virtual Screening of Nanoporous Materials for Noble Gas Separation},
+	journal = {ACS Appl. Nano Mater.} Applied Nano Materials}
+}
