--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -93,26 +93,35 @@ Simarly to what we have done on the thermodynamic screening (chapter 2--4), in o
 
 The lattice kinetic Monte Carlo method relies on a pre-defined lattice of stable points corresponding to adsorption sites. Each site connected to another if there is a diffusion path (narrow channel) that connects them. To calculate the probability of transition from one site to another, we need to define a transition state in the narraow channel which correspond to the highest energy point on the minimal energy diffusion path (the saddle point). The probability of transition would therefore be defined with regard to the energy barrier to overcome in order to cross the channel. Once the lattice defined, we only need to propagate an adsorbate from one site to another using the different transition probabilities, which gives a coarse-grained trajectory compared to the one obtained in a MD simulation, but is perfectly usable to compute the MSD and calculate a diffusion coefficient.
 
-\todo{Illustration}
 
-\subsubsection{Transition state theory}
+\begin{figure}[ht]
+  \centering
+    \includegraphics[width=0.95\textwidth]{figures/5-diffusion/kinetic_MC.pdf}
+    \caption{Illustration of the core principle of lattice kinetic Monte Carlo in a periodic system. The particle moves inside the periodic system according to the transition probabilities to move from one site to another. The transition rates are determined using the activation energy needed to move to the transition state between the two stable adsoprtion sites as shown in equations~\ref{eq:trans_rate_path} and~\ref{eq:trans_rate}. }\label{fgr:kMC_principle}
+\end{figure}
 
-The transition state theory is usually used in chemistry to explain the kinetics of a reaction. To do so it compares the energy of the reactants before reacting and the one of the transition state to calculate the rate of the reaction. And it defines a reaction kinetic rate that explains the kinetics of a reaction.
+\subsubsection{Transition state theory for diffusion}
 
-In our case, we want to study the transition from a pore to another one by transitioning through a channel. It is also possible to define a diffusion rate that connects the adsorption sites of the pores using Bennet-Chandler 
-\todo{Bennet-Chandler approach}\autocite{BENNETT1977}
+The transition state theory is usually used in chemistry to explain the kinetics of a reaction. To do so it compares the energy of the reactants before reacting and the one of the transition state to calculate the rate of the reaction. This reaction rate along a reaction path is proportional to the ratio of the Boltzmann factor at the transition state and the integration of the Boltzmann factors along the reaction path.
 
-\todo{what is a transition state for diffusion?}
+This definition can be directly transposed to the case of a diffusion path instead of a reaction path, and we can define the diffusion rate $\mathcal{R}_{0\rightarrow 1}$ from site $0$ to $1$ as follows:
+\begin{equation}\label{eq:trans_rate_path}
+  \mathcal{R}_{0\rightarrow 1} = \kappa\sqrt{\frac{k\e{B}T}{2\pi m}}\frac{e^{-\beta E(\mathbf{r}\ex{TS})/k\e{B}T}}{\int\e{path}e^{-\beta E(\mathbf{r})/k\e{B}T}\dd\mathbf{r}}
+\end{equation}
+where $\kappa$ is the Bennet-Chandler dynamic correction factor,\autocite{BENNETT1977} and  $\kappa=\tfrac{1}{2}$ if it is equiprobable to reach both sites from the transition state. This approach calls for the determination of the optimal diffusion path before carrying out the determination fo the diffusion rate. This is for instance the approach adopted by Wang et al. in their screening for noble gas separation, where they determined the minimal energy path before calculating diffusion rates.\autocite{Wang_2022}
+
+Another approach is to determine a surface of transition through which the adsorbate would pass to diffuse along the channel of the material. This approach calls for the determination of the surface of transition only, but it relies on another definition of the transition rate $\mathcal{R}_{0\rightarrow 1}$:
+\begin{equation}\label{eq:trans_rate}
+  \mathcal{R}_{0\rightarrow 1} = \kappa\sqrt{\frac{k\e{B}T}{2\pi m}}\frac{\int_{\mathcal{S}(TS)}e^{-\beta E(\mathbf{r})/k\e{B}T}\dd\mathbf{r}}{\int_{\mathcal{V}(\text{S}_0)}e^{-\beta E(\mathbf{r})/k\e{B}T}\dd\mathbf{r}}
+\end{equation}
+where the integration for the transition state is done on a bottle-neck surface that a diffusing particle need to cross in order to go from the volume occupied by a site $0$ to the one occupied by $1$.
 
 \subsubsection{Construction of the lattice}
 
-\todo{Detect TS, and bassins.}
+In this section, I will focus on the second approach that relies on the determination of a transition state as a surface. This approach has been developed by Mace et al. and relies on detecting the merging points of bassin representing the adsorption sites. The algorithm developed is called TuTraST, which stand for Tunnels and Transition States, is a search algorithm that aims at finding the tunnels and the transition states within them.\autocite{Mace_2019} Once the adsorption sites, the transition states and the tunnels that connect them are found, the equation ~\ref{eq:trans_rate} can be used to calculate the transition rates to move a particle from one point to another and hence producing a kinetic Monte Carlo simulation to determine the MSD and eventually the diffusion coefficients. 
 
-Fast kinetic Monte Carlo
-tutrast\autocite{Mace_2019} autre étude avant aussi
-
-\todo{Generation of trajectories + similar techniques than previously presented to find the MSD}
-
+This approach is inspiring our code to 
+\todo{}
 
 \section{Screening of transport properties}\label{sct:md_screening}
 
@@ -134,7 +143,7 @@ where $v_m$ is the average velocity of a particle that follows the Maxwell-Boltz
   \centering
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/MSD_anomalous_diffusion.pdf}
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/MSD_Xe_KAXQIL_clean.pdf}
-    \caption{Left: Different regimes that could be observed in an MSD plot as a function of time. The ballistic regime can be considered superdiffusional, the normal diffusion is simply a linear relation as described in the Einstein equation\ref{eq:einstein}, and the subdiffusion regime often occurs in obstructed media like nanoporous materials. \todo{redo} The different regimes can be found on the right plot of an actual MSD calculated using the multiple window method. The fittings are done using a generic function $K_\alpha\tau^\alpha$ and the exponents $\alpha$ are given in the legend. }\label{fgr:MSD_init}
+    \caption{Left: Different regimes that could be observed in an MSD plot as a function of time. The ballistic regime can be considered superdiffusional, the normal diffusion is simply a linear relation as described in the Einstein equation\ref{eq:einstein}, and the subdiffusion regime often occurs in obstructed media like nanoporous materials. The different regimes can be found on the right plot of an actual MSD calculated using the multiple window method. The fittings are done using a generic function $K_\alpha\tau^\alpha$ and the exponents $\alpha$ are given in the legend. }\label{fgr:MSD_init}
 \end{figure}
 
 Then, there is a transition from the ballistic regime to the pseudo-diffusional regime (the exponent does not reach $1$ yet) that we observe in cyan on the plot. Between \SI{1}{\ps} and \SI{100}{\ps}, there is a so-called subdiffusion regime, where the MSD has a power function of the time $\langle {r(\tau)}^2 \rangle=K_\alpha\tau^\alpha$ with an exponent inferior to $1$ as illustrated on the left plot of Figure~\ref{fgr:MSD_init}. This regime corresponds to the confinement of the xenon particle inside an adsorption pore, there is only thermal vibration occuring and no diffusion hopping is observed at this time scale. And diffusion seems to start occuring at the \SI{10}{\ns} time-scale. As we can see on the Figure~\ref{fgr:MSD_linear_init}, the MSD between \SI{0.01}{\ns} and \SI{0.4}{\ns} really represents a sub-diffusional regime due to the confinement imposed by the nanopores of KAXQIL, but at \SI{0.4}{\ns}--\SI{9}{\ns}, the MSD start to have an exponent closer to $1$ and a linear fit is possible although not perfect. Ideally, we would want to sample trajectories in the order of tens of nanoseconds, which is the next time-scale. But with an MD time step of \SI{1}{\fs}, this would mean multiplying the computation time by at least 5 (1--2 weeks for one MD simulation), which begins to be prohibitive. 
@@ -171,7 +180,7 @@ This approach only probes the linear relations between the MSD and time to deter
 
 \subsubsection{Structure--diffusivity relationships}
 
-In this section, I will present the different relations the diffusion coefficient may or may not have with the geometrical descriptors. I decided to use a forcefield-dependent definition of the radii so that it better correlates with the results of the MD simulation that uses the UFF forcefield. The different geometrical descriptors are then calculated using Zeo++ and these radii to calculate the PLD, the LCD or D$_{if}$ along a free path, the surface area and the pore volume, as already explained in the chapter 2. To further justify the use of the UFF-based radii, the original paper \cite{Hung_2021} showed the better correlation of the PLD to the diffusion constant, and we can also see it from the Figure~\ref{fgr:diff_pld}. The PLD calculated by the standard CCDC defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article \cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in the chapter 1), there is a linear relation between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD, and this linear relation is much more noisy for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
+In this section, I will present the different relations the diffusion coefficient may or may not have with the geometrical descriptors. I decided to use a forcefield-dependent definition of the radii so that it better correlates with the results of the MD simulation that uses the UFF forcefield. The different geometrical descriptors are then calculated using Zeo++ and these radii to calculate the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area and the pore volume, as already explained in the chapter 2. To further justify the use of the UFF-based radii, the original paper \cite{Hung_2021} showed the better correlation of the PLD to the diffusion constant, and we can also see it from the Figure~\ref{fgr:diff_pld}. The PLD calculated by the standard CCDC defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article \cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in the chapter 1), there is a linear relation between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD, and this linear relation is much more noisy for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
 
 Beyond the practical considerations on the geometrical descriptor calculations, the PLD explains the outlines of the variation of diffusion performance inside a nanoporous material. First there is a the linear relation previously highlighted, and then there is a sort of noisy plateau. In the first zone, the xenon is constrained by channels narrower than its kinetic radius. The wider the channel the higher the diffusion coefficient is, and this positive correlation persists until the channel is wider than about \SI{4.6}{\angstrom}. After this threshold, the diffusion coefficient is rather stable around $10^{-4}$~\si{\square\cm\per\square\s}, and the variations can only be explained by other phenomena such as the tortuosity inside nanopores or chemical nature of the surface of the nanopores. 
 
@@ -183,16 +192,7 @@ Beyond the practical considerations on the geometrical descriptor calculations, 
 \end{figure}
 \todo{refaire les figures avec D à la place de log10 D et en log scale}
 
-If we now analyze the channel dimensions (determined using Zeo++) that could inform use a little bit on the channel shape, we can see (on Figure~\ref{fgr:hist_diffusion_chandim}) that the distribution of diffusion coefficients depends in some extend to the dimensionality of the channels within the framework. The distribution for structures containing 1D structures is much more heavy tail in terms of low diffusion coefficients. We can more easily find 1D structures with very low diffusion coefficients under $3/times 10^{-8}$~\si{\square\cm\per\square\s}. The vast majority of structures with tridimensional channels has a rather higher diffusion coefficient between $3\times 10^{-6}$~\si{\square\cm\per\square\s} and $10^{-4}$~\si{\square\cm\per\square\s} with almost no structures with lower diffusion coefficients. This is not as blatant for bi- and unidimensional channels, we can more easily find structures between $3/times 10^{-8}$~\si{\square\cm\per\square\s} and $3\times 10^{-6}$~\si{\square\cm\per\square\s}, even if thery are not that frequent. The dimensionality of the channels can therefore influence the values of diffusion coefficient but the relation is not as clear as for PLD. Maybe it can help distinguish the structures in the plateau.
-
-\begin{figure}[ht]
-  \centering
-    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/histogram_chan1D.pdf}
-    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/histogram_chan2D.pdf}
-    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/histogram_chan3D.pdf}
-    \caption{ Distributions of diffusion coefficient of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channels, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:hist_diffusion_chandim}
-\end{figure}
-
+If we now analyze the channel dimensions (determined using Zeo++) that could partially inform us on the channel shape. As we can see on the Figure~\ref{fgr:scatter_diffusion_chandim}, the dispersion of the diffusion coefficients at the plateau is actually very hard to characterize using the channel dimension with bear eyes. 
 
 \begin{figure}[ht]
   \centering
@@ -202,16 +202,26 @@ If we now analyze the channel dimensions (determined using Zeo++) that could inf
     \caption{ Distributions of diffusion coefficient of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channels, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:scatter_diffusion_chandim}
 \end{figure}
 
-\todo{Enthalpy / LCD}
+For this reason, I plotted on Figure~\ref{fgr:hist_diffusion_chandim} the distribution of diffusion coefficients that depends on the dimensionality of the channels within the framework. The distribution for structures containing 1D structures is much more heavy tail in terms of low diffusion coefficients. We can more easily find 1D structures with very low diffusion coefficients under $3/times 10^{-8}$~\si{\square\cm\per\square\s}. The vast majority of structures with tridimensional channels has a rather higher diffusion coefficient between $3\times 10^{-6}$~\si{\square\cm\per\square\s} and $10^{-4}$~\si{\square\cm\per\square\s} with almost no structures with lower diffusion coefficients. This is not as blatant for bi- and unidimensional channels, we can more easily find structures between $3/times 10^{-8}$~\si{\square\cm\per\square\s} and $3\times 10^{-6}$~\si{\square\cm\per\square\s}, even if thery are not that frequent. The dimensionality of the channels can therefore influence the values of diffusion coefficient but the relation is not as clear as for PLD.
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-H_Xe_s_+.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-lcd_s_+.pdf}
-    \caption{Logarithm of the xenon diffusion coefficient at infinite dilution as a function of the xenon adsorption enthalpy (left) and the largest cavity diameter D$_{if}$ within a free diffusion path. }\label{fgr:diff_H_lcd}
+    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/histogram_chan1D.pdf}
+    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/histogram_chan2D.pdf}
+    \includegraphics[width=0.32\textwidth]{figures/5-diffusion/histogram_chan3D.pdf}
+    \caption{ Distributions of diffusion coefficient of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channels, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:hist_diffusion_chandim}
 \end{figure}
 
-\todo{Density / Molar Mass}
+Other geometrical properties of the material that can influence the diffusion is the void fraction and surface area. The low diffusion coefficients usually happen in materials with small pore volumes below $0.6$ as we can see on the Figure~\ref{fgr:diff_sa_vf}. However, it is diffuscult to draw a relationship between the voide fraction and the diffusion coefficient. The only relation is that materials with void fraction higher than $0.6$ have a diffsion coefficient over $3\times 10^{-6}$~\si{\square\cm\per\square\s}. This phenomenon is certainly du to the correlation between the PLd and the void fraction. Large PLD values are usually associated with large values of the void fraction. On the other hand, the accessible surface area for a probe of size $1.2$~\si{\angstrom} does not seem to influence the diffusion coefficient at all. 
+
+\begin{figure}[ht]
+  \centering
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-vf_2_s_+.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-sa_12_s_+.pdf}
+    \caption{Logarithm of the xenon diffusion coefficient at infinite dilution as a function of the accessible surface area (left) and the void fraction (right). }\label{fgr:diff_sa_vf}
+\end{figure}
+
+Framework density and molar mass are immediate characterictics of the structure since they do not require complicated simulations to obtain. The relation to the diffusion is, however, not that clear as we can see of the Figure~\ref{fgr:diff_density_mass}. We can probably say that low values of the density favors high values of the diffusion coefficeint, this can be understtod by the logical relation between low density and high porosity. Another relation to the diffusion coefficient concerns the higher probability to find high diffusion coefficients as materials have a higher molar mass. This last assertion is harder to justify using simple geometrical reasoning. 
 
 \begin{figure}[ht]
   \centering
@@ -220,29 +230,24 @@ If we now analyze the channel dimensions (determined using Zeo++) that could inf
     \caption{Logarithm of the xenon diffusion coefficient at infinite dilution as a function of the density (left) and the mass (right) of the frameworks. }\label{fgr:diff_density_mass}
 \end{figure}
 
-Avec la définition UFF.
-
-\todo{VF}
-\todo{SA}
+The largest sphere diameter D$_{if}$ along a free diffusion path has a similar relation to the diffusion coefficient, but the correlations are much more noisy as we can see on the left plot of the Figure~\ref{fgr:diff_H_lcd}.  This can be explained by the fact that D$_{if}$ is always superior or equal to the pore limiting diameter  D$_{f}$ by definition. When both are equal it is equivalent to the Figure~\ref{fgr:diff_pld} with a linear relation and plateau, but if it is higher it creates the sort of noise that we see on the the left plot of the Figure~\ref{fgr:diff_H_lcd}. 
 
 \begin{figure}[ht]
   \centering
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-sa_12_s_+.pdf}
-    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-vf_2_s_+.pdf}
-    \caption{Logarithm of the xenon diffusion coefficient at infinite dilution as a function of the accessible surface area (left) and the void fraction (right). }\label{fgr:diff_sa_vf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-lcd_s_+.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/5-diffusion/D_log-H_Xe_s_+.pdf}
+    \caption{Logarithm of the xenon diffusion coefficient at infinite dilution as a function of the largest sphere diameter D$_{if}$ along a free diffusion path (left) and the xenon adsorption enthalpy (right). }\label{fgr:diff_H_lcd}
 \end{figure}
 
-% Outre l'exemple très parlant de SBMOF-1, d'autres publications, dans la séparation d'hydrocarbures notamment, s'intéressent aux éventuelles blocages cinétiques grâce à des simulations de dynamique moléculaire (MD) flexible.\cite{Stanton_2022} Ils ont notamment mis en évidence que la diffusion pouvait détériorer les performances de structure présentant d'excellente performance thermodynamique (énergie d'adsorption). Cette approche est très complète, car elle allie la thermodynamique, la flexibilité et les effets de transport dans une seule étude. En revanche, elle est très coûteuse en temps de calcul et ne pourrait être appliquée qu'à une poignée de structures. Au lieu d'utiliser des champs de force flexible qui alourdissent énormément la simulation, il est possible de se tourner vers une approche en ``snapshot'' bien moins coûteuse que nous développerons dans la dernière partie de ce rapport. Dans cette partie, nous nous focaliserons uniquement sur le couplage thermodynamique/cinétique.
+The last comparison is made with a thermodynamic quantity, the xenon adsorption enthalpy $\Delta\e{ads}\ex{Xe}H$. There is no relation between diffusion coefficient and the xenon adsorption enthalpy, which is good thing because it means that any configurations are possible. A material can both have a high diffusion coefficient and a high xenon adsorption affinity (very negative values of enthalpy), which is the best configuration for adsorption at infinite dilution. However, it also means that we need to test the diffusivity when the material has a good affinity in order to optimize both properties. This approach will constitue the core discussion around the optimization of both the Xe/Kr selectivity and the diffusion coefficients of Xe and Kr.  
 
-% Afin de recouper nos données purement structurelles et thermodynamiques avec des propriétés de transport, on a effectué un screening des coefficients de diffusion du xénon et du krypton sur les 7822 structures les plus sélectives. 
-% Des trajectoires de dynamique moléculaire ont été calculées sur l'ensemble de ces structures deux fois pour chaque adsorbat à dilution infinie. Il a fallu environ une à deux journées de simulation par structure afin de déterminer leurs coefficients de diffusion. Il est à noter pour la suite que les valeurs de diffusivités sont déterminés à l'ordre de grandeur près. Autrement dit c'est l'échelle logarithmique qui est pertinent pour les comparer à d'autres grandeurs. On a pu établir une forte corrélation entre le coefficient de diffusion et la taille minimale des canaux de diffusion à l'intérieur du matériau (PLD). La figure~\ref{fgr:Diff_Df_s} met en évidence la corrélation linéaire entre le logarithme de la diffusivité et le LCD pour des canaux de taille inférieure au diamètre cinétique du xénon (\SI{4,3}{\angstrom}). Ensuite, on arrive sur un plateau, c'est-à-dire que la diffusion du xénon dans le matériau ou dans le vide sont quasiment équivalentes. Les canaux sont assez larges pour permettre la libre diffusion du xénon à l'intérieur de ces matériaux. On voit aussi que ces matériaux ont moins de chances d'être sélectifs (les points foncés sont plus rares). Cette corrélation ouvre la voie au développement de modèles statistiques pour prédire la diffusivité, ce qui a déjà été étudié par Daglar \emph{et al.} dans leur récente publication.\cite{Daglar_2022} Dans leur étude, pour l'hélium, le coefficient de corrélation entre les coefficients de diffusion prédites et calculés par MD est d'environ 0,65 pour les données de test, ce qui n'est pas très précis. Il faut donc nuancer l'approche ``machine learning'' pour la prédiction des diffusivités. Cependant, l'étude n'a pas encore été menée sur le xénon et le krypton, ce qui pourrait mériter une étude préliminaire.
 
 
 \subsection{A trade-off between the selectivity and the diffusion}
 
+\subsubsection{Diffusion selectivity and permselectivity}
 
-
-\todo{Identification of interesting materials}
+\subsubsection{Identification of interesting materials}
 
 % En analysant les rapports des coefficients de diffusion en comparaison des sélectivités, on a pu identifier deux structures qui couplent une bonne sélectivité à un ratio de diffusivités autour de 0,5 (\emph{cf.} table~\ref{table:diff}) : les structures de code CCSD GUMDEZ et QOZDOY. Grâce à leur LCD proches du diamètre cinétique du xénon et à un PLD assez élevé pour ne pas entraver le déplacement du xénon à travers les canaux. Les coefficients de diffusion du xénon tournent autour de 7$\times$10\ex{-5} \SI{}{\square\centi\meter\per\second} ce qui est proche de la diffusion libre (de l'ordre de 10\ex{-5} \SI{}{\square\centi\meter\per\second}), ce qui confirme l'absence de blocage cinétique. 
 
@@ -252,7 +257,7 @@ Avec la définition UFF.
 \centering
 \begin{tabular}{|l|r|r|r|r|r|r|}
 \hline
-  CCSD ref.\ code &      LCD (\SI{}{\angstrom}) &    s$_1$ &       s$_0$ &     PLD (\SI{}{\angstrom}) &     Ratio Diff. &  Coeff.\ de Diff. Xe \\
+  CCSD ref.\ code &      PLD (\SI{}{\angstrom}) &    s$_1$ &       s$_0$ &     PLD (\SI{}{\angstrom}) &     Ratio Diff. &  Coeff.\ de Diff. Xe \\
 \hline
 QOZDOY\cite{Zhang_2001} &  5,3 & 37 & 52 & 4,7 &  0.4 &               7$\times$10\ex{-5} \SI{}{\square\centi\meter\per\second} \\
 GUMDEZ\cite{Yin_2014} &  5,3 & 42 & 56 & 4,8 &  0.5 &               7$\times$10\ex{-5} \SI{}{\square\centi\meter\per\second} \\
