--- a/thesis.bib
+++ b/thesis.bib
@@ -3568,5 +3568,5 @@ URL = {https://doi.org/10.1137/0216006},
 	pages = {3701--3711},
 	author = {Jingqi Wang and Musen Zhou and Diannan Lu and Weiyang Fei and Jianzhong Wu},
 	title = {Virtual Screening of Nanoporous Materials for Noble Gas Separation},
-	journal = {ACS Appl. Nano Mater.} Applied Nano Materials}
+	journal = {ACS Appl. Nano Mater.}
 }
